# dspLab_ws24

DCT/: README.md  pyproject.toml
DCT/dct/: main.py
DFT/data/: input.csv  output.csv
DFT/include/: data_utils.h
DFT/scripts/: main_dft.py
DFT/src/: main_dft.c
Downsampling/data/: firCoeffsNew.csv  input.csv  output.csv
Downsampling/include/: data.h  ds.h
Downsampling/scripts/: downsampling.py  plotFIRFilterSpec.py
Downsampling/src/: data.cpp  ds.cpp  ds_main.cpp
FIR/include/: data.h  fir.h
FIR/scripts/: audioPlayground.py  fullConvolution.py  plotFIRFilterSpec.py
FIR/src/: FIR_main.cpp  data.cpp  fir.cpp
IIR/data/: iir_biquads.csv  input.csv  output.csv
IIR/include/: data.h  iir.h
IIR/scripts/: generateIIR.py  processBiquadCascade.py
IIR/src/: data.cpp  iir.cpp  iir_main.cpp
InstFreq/data/: input.csv  output.csv
InstFreq/include/: data.h  iFreq.h
InstFreq/scripts/: instFreqMain.py
InstFreq/src/: IF_main.cpp  data.cpp  iFreq.cpp
LMS/include/: lms.h
LMS/scripts/: audioPlayground.py
LMS/src/: LMS_main.cpp  lms.cpp
STFT/: audioAnalyzer.py
cfar/data/: input.csv  output.csv
cfar/include/: complex.h  data_utils.h
cfar/scripts/: main_cfar.py  main_dft.py  main_idft.py
cfar/src/: main_dft.c
clustering/data/: input.csv  output.csv
clustering/include/: complex.h  data_utils.h
clustering/scripts/: main_clustering.py
clustering/src/: main_dft.c
docs/: cfar.excalidraw  cfar.md  clustering.md  mixing.md  stft.md
